// ***********************
//  Euskalbar - CHANGELOG
// ***********************

3.5 bertsioa
================
- ItzuL posta-zerrendako mezuak Google bilatzailearen bidez kontsultatzen dira. (#85)
- Bergarako hiztegia webgune berrian kontsultatzen da. (#85)
- Denbora-mugararen hobespenerako zenbaki motako testu-kutxa erabiltzen da. (#63)

3.4 bertsioa
================
- Goihata euskara-japoniera hiztegia gehitu da. (#82)
- Ereduzko Prosa Gaur bere webgune berrian kontsultatzen da. (#81)
- Japonierako lokalizazioa gehitu da.

3.3 bertsioa
================
- Open-tran bilaketa konbinatuetan integratu da. (#67)
- Hiztegi Batua zuzendu da Euskaltzaindiaren webgune berriaren kontsultak erakutsi ahal izateko. (#78) 

3.2 bertsioa
================
- Elhuyar Hiztegia helbide berrian kontsultatzen da.
- Elhuyar En-Eu hiztegia kontsultatzeko aukera gehitu da.
- Frantsesezko hiztegien aukerak gehitu dira (Euskalterm, Elhuyar).
- Euskalterm latinez kontsultatzeko aukera gehitu da. (#68)
- Interfazea frantsesera ere itzuli da.
- Testu-koadroa hutsik dagoenean, mezu bat agertzen da testua sartu behar dela esanez. (#71)

3.1 bertsioa
================
- Azal pertsonalizatuak erabiltzeko aukera gehitu da. (#57)
- Euskal Wikipedia gehitu zaio barrari. (#61)
- Elebila euskarazko bilatzailea gehitu zaio barrari. (#56)
- CorpEusen eta ZT Corpusean azentu markak, eñeak eta dieresiak ematen zituzten arazoak konpondu dira. (#55)
- Ereduzko prosa gaur proiektuko corpusa eta Klasikoen gordailua gehitu zaizkio barrari. (#54)
- Bilaketa konbinatuetan Hiztegi Batuaren azpisarrerak kontsultatzeko aukera gehitu da. (#40) 
- Hiztegien menua erakutsi/ezkutatzeko hobespena hobespenen leihoan integratu da. (#49)
- Testuinguru-menua erakutsi/ezkutatzeko hobespena sortu da. (#48)
- Laster-teklak sortu dira. (#44)
- Euskalterm-en bilaketak egitean, hitz baten hasiera kontsultatzen bada, hitz amaieran "*" komodina idatzi balitz bezala funtzionatzen du. (#60)
- Estatistiken kudeaketa hobetu da. (#30)

