@@ -37,7 +37,7 @@
 <!ENTITY euskalbar.about.whatsnew1 "These are the main new features of this new version of Euskalbar:">
 <!ENTITY euskalbar.about.whatsnew2 "Changed queries on Itzul mailing list to not use Gmane and use Google">
 <!ENTITY euskalbar.about.whatsnew3 "Bergarako Hiztegia uses a new website">
-<!ENTITY euskalbar.about.whatsnew4 "">
+<!ENTITY euskalbar.about.whatsnew4 "Added Labayru Hiztegia">
 <!ENTITY euskalbar.about.whatsnew5 "">
 <!ENTITY euskalbar.about.whatsnew6 "">
 <!ENTITY euskalbar.about.whatsnew7 "The complete changelog can be seen here (in Basque):">
