@@ -37,7 +37,7 @@
 <!ENTITY euskalbar.about.whatsnew1 "Las principales novedades de esta versión de Euskalbar son las siguientes:">
 <!ENTITY euskalbar.about.whatsnew2 "La lista de correo ItzuL se deja de consultar en Gmane y se consulta en Google">
 <!ENTITY euskalbar.about.whatsnew3 "Bergarako Hiztegia se consulta en su nuevo sitio web">
-<!ENTITY euskalbar.about.whatsnew4 "">
+<!ENTITY euskalbar.about.whatsnew4 "Se ha añadido Labayru Hiztegia">
 <!ENTITY euskalbar.about.whatsnew5 "">
 <!ENTITY euskalbar.about.whatsnew6 "">
 <!ENTITY euskalbar.about.whatsnew7 "El listado completo de cambios se puede consultar en la siguiente dirección (en euskera):">
