@@ -37,7 +37,7 @@
 <!ENTITY euskalbar.about.whatsnew1 "Euskalbarren bertsio honen berrikuntza nagusiak hauek dira:">
 <!ENTITY euskalbar.about.whatsnew2 "Itzul posta-zerrenda ez da Gmane-n kontsultatzen jadanik, Google-n baizik">
 <!ENTITY euskalbar.about.whatsnew3 "Bergarako Hiztegia bere webgune berrian kontsultatzen da">
-<!ENTITY euskalbar.about.whatsnew4 "">
+<!ENTITY euskalbar.about.whatsnew4 "Labayru Hiztegia gehitu da">
 <!ENTITY euskalbar.about.whatsnew5 "">
 <!ENTITY euskalbar.about.whatsnew6 "">
 <!ENTITY euskalbar.about.whatsnew7 "Berrikuntzen zerrenda osoa, hurrengo helbidean:">
