@@ -37,7 +37,7 @@
 <!ENTITY euskalbar.about.whatsnew1 "Les principales noveautés de cette version sont les suivants:">
 <!ENTITY euskalbar.about.whatsnew2 "Changed queries on Itzul mailing list to not use Gmane and to use Google">
 <!ENTITY euskalbar.about.whatsnew3 "Bergarako Hiztegia uses a new website">
-<!ENTITY euskalbar.about.whatsnew4 "">
+<!ENTITY euskalbar.about.whatsnew4 "Added Labayru Hiztegia">
 <!ENTITY euskalbar.about.whatsnew5 "">
 <!ENTITY euskalbar.about.whatsnew6 "">
 <!ENTITY euskalbar.about.whatsnew7 "La liste complète de noveautés, dans la direction suivante:">
