@@ -1,4 +1,8 @@
-/*  skin/toolbar-button.css*/  
+/*  skin/toolbar-button.css*/ 
+
+#EuskalBar-Toolbar {
+  overflow: visible;
+} 
 
 toolbar #euskalbar-button {
   list-style-image: url('chrome://euskalbar/skin/euskalbar16.png'); 
