@@ -7,6 +7,7 @@
 - ItzuL posta-zerrendako mezuak Google bilatzailearen bidez kontsultatzen dira. (#85)
 - Bergarako hiztegia webgune berrian kontsultatzen da. (#85)
 - Denbora-mugararen hobespenerako zenbaki motako testu-kutxa erabiltzen da. (#63)
+- Labayru Hiztegia gehitu da. (#83)
 
 3.4 bertsioa
 ================
